persiste el error 2

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 
         <div id="areaJuego" style="text-align:center;">
-            <canvas id="ahorcado" height="400px" width="800px"></canvas>
+            <canvas id="ahorcado" height="400px" width="800px" color=" blue"></canvas>
 
 
             <div class="mensaje">
